css - fixed admin controls on mobile

--- a/src/scss/modules/pages/results.scss
+++ b/src/scss/modules/pages/results.scss
@@ -1,3 +1,9 @@
+body.--controls-visible {
+  .cards-grid {
+    grid-template-columns: 1fr !important;
+  }
+}
+
 .results-content {
   /* #region  Overall */
   width: 100vw;
